remove .DS_Store

--- a/app/views/landing/bishal2.html.erb
+++ b/app/views/landing/bishal2.html.erb
@@ -54,9 +54,9 @@
 
 
 <main id="content" role="main">
-    <div class="container u-space-4-top u-space-3-bottom">
+    <div class="container u-space-2-top u-space-2-bottom">
         <div class="row">
-            <div class="col-lg-7 mb-7 mb-lg-0">
+            <div class="col-lg-7  mb-7 mb-lg-0">
                 <!-- Cubeportfolio -->
                 <div class="cbp cbp-caption-active cbp-caption-overlayBottomAlong cbp-ready" data-layout="grid" data-animation="quicksand" data-x-gap="32" data-y-gap="32" data-media-queries="[
                     {&quot;width&quot;: 300, &quot;cols&quot;: 1}]" style="height: 100%;">
@@ -64,7 +64,7 @@
                     <div class="cbp-wrapper-outer">
                         <div class="cbp-wrapper">
                             <!-- Item -->
-                            <div class="cbp-item" style="width: 634px; left: 0px; top: 0px;">
+                            <div class="cbp-item">
                                 <div class="cbp-item-wrapper">
                                     <div class="cbp-caption">
                                         <%= image_tag asset_pack_path('init/bootstrap/theme/img/600x600/img1.jpg'), :alt => "Image", :class=> "rounded"%>
@@ -145,7 +145,7 @@
          <!-- Masonry Section -->
         <div class="u-cubeportfolio py-3 u-bg-light-blue-50 mt-6">
             <!-- Title -->
-            <div class="w-md-80 w-lg-50 text-center mx-auto mb-5">
+            <div class="w-md-80 w-lg-50 text-center mx-auto mb-5 mt-6">
                 <h2 class="text-custom">Voir aussi sur le même <strong class="font-weight-bold">thème</strong></h2>
             </div>
             <!-- End Title -->
@@ -153,24 +153,31 @@
             <div class="masonry-container">
                 <!-- content -->
                 <div class="masonry-box">
-                    <article>
+                    <article class="transition-3d-hover">
                         <!-- Image -->
-                        <div class="item-img mb-4 ">
+                        <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img1.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
-                        </div>
+                        </a>
                         <!-- End Image -->
+
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                 </div>
                 <!-- End content -->
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article >
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img2.jpg'), :alt => "Image", :class => "img-fluid item-img item-img rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                     
                 </div>
@@ -178,12 +185,15 @@
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article >
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img3.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                     
                 </div>
@@ -191,12 +201,15 @@
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article >
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img4.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                     
                 </div>
@@ -204,56 +217,67 @@
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article>
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img5.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                 </div>
                 <!-- End content -->
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article>
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img6.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                 </div>
                 <!-- End content -->
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article>
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img7.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                 </div>
                 <!-- End content -->
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article>
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img8.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                 </div>
                 <!-- End content -->
-
             </div>
 
             <!-- Load More Button -->
-            <div id="cubeLoadMore" class="text-center mt-4">
+            <div id="cubeLoadMore" class="text-center mt-6 mb-6">
                 <a href="../../assets/include/ajax/home-blog-business-1/load-more.html" class="cbp-l-loadMore-link u-link f-color" rel="nofollow">
                     <span class="cbp-l-loadMore-defaultText text-secondary">
                         Voir plus
@@ -272,7 +296,7 @@
         <!-- Masonry Section -->
         <div class="u-cubeportfolio py-3 u-bg-light-blue-50 mt-6">
             <!-- Title -->
-            <div class="w-md-80 w-lg-50 text-center mx-auto mb-5">
+            <div class="w-md-80 w-lg-50 text-center mx-auto mb-5 mt-6">
                 <h2 class="text-custom">Voir aussi sur le même <strong class="font-weight-bold">secteur</strong></h2>
             </div>
             <!-- End Title -->
@@ -280,16 +304,15 @@
             <div class="masonry-container">
                 <!-- content -->
                 <div class="masonry-box">
-                    <article class="item-container">
+                    <article class="transition-3d-hover">
                         <!-- Image -->
-                        <div class="item-img transition-3d-hover">
+                        <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img1.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
-                        </div>
+                        </a>
                         <!-- End Image -->
 
-                        <div class="item-intro bg-custom text-center">
-                            <h4 class="text-white">Title</h4>
-                            <p>Nom du secteur </p>
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
                         </div>
                     </article>
                 </div>
@@ -297,16 +320,14 @@
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article>
+                    <article class="transition-3d-hover">
                         <!-- Image -->
-                        <div class="item-img transition-3d-hover">
+                        <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img2.jpg'), :alt => "Image", :class => "img-fluid item-img item-img rounded"%>
-                        </div>
+                        </a>
                         <!-- End Image -->
-
-                        <div class="item-intro bg-custom text-center">
-                            <h4 class="text-white">Title</h4>
-                            <p>Nom du secteur </p>
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
                         </div>
                     </article>
                     
@@ -315,12 +336,15 @@
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article>
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img3.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                     
                 </div>
@@ -328,12 +352,15 @@
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article>
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img4.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                     
                 </div>
@@ -341,56 +368,67 @@
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article>
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img5.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                 </div>
                 <!-- End content -->
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article>
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img6.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                 </div>
                 <!-- End content -->
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article>
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img7.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                 </div>
                 <!-- End content -->
 
                 <!-- content -->
                 <div class="masonry-box">
-                    <article>
+                    <article class="transition-3d-hover">
                         <!-- Image -->
                         <a href= "bishal2" class="item-img mb-4">
                             <%= image_tag asset_pack_path('init/bootstrap/theme/img/380x360/img8.jpg'), :alt => "Image", :class => "img-fluid rounded"%>
                         </a>
                         <!-- End Image -->
+                        <div class="px-2">
+                            <h3 class="h6 masonry-title text-custom">Nom du brand</h3>
+                        </div>
                     </article>
                 </div>
                 <!-- End content -->
-
-            </div>
+            </div>   
 
             <!-- Load More Button -->
-            <div id="cubeLoadMore" class="text-center mt-4">
+            <div id="cubeLoadMore" class="text-center mt-6 mb-6">
                 <a href="../../assets/include/ajax/home-blog-business-1/load-more.html" class="cbp-l-loadMore-link u-link f-color" rel="nofollow">
                     <span class="cbp-l-loadMore-defaultText text-secondary">
                         Voir plus
@@ -405,40 +443,50 @@
             <!-- End Load More Button -->
         </div>
         <!-- End masonry section -->
-
     </div>
 </main>
 
 <!-- Footer -->
-<footer class="bg-custom">
-    <div class="container u-space-1-top u-space-1-bottom">
+<footer class="u-bg-light-blue-50">
+    <div class="container u-space-1-top u-space-0-bottom">
         <div class="row justify-content-md-between align-items-md-start">
-            <div class="col-md-6 mb-7 mb-md-0">
-                <h2 class="text-white mb-5">You wish us<br>to talk about <span class="font-weight-bold">your project</span>?</h2>
-                <a class="h4 u-link-light" href="#">support@conceptstor.com</a>
+            <div class="col-md-6 mb-7 mb-md-0 text-custom">
+                
+                <a href="bishal" class="logo-font mr-2 text-custom fa-size footer-logo">Conceptstor</a>
+                <span class="d-inline-block">
+                    <h5 class="mb-5"> 
+                        &copy; inSiti 2019 | 
+                        <a class="h5 u-link-light" href="https://www.insiti.co" target="_blank"> Groupe </a>
+                    </h5>
+                </span>
+                
             </div>
 
-            <div class="col-md-6 mt-md-auto text-md-right">
+            <div class="col-md-6 mt-md-0 text-md-right">
                 <!-- Social Networks -->
                 <ul class="list-inline">
                     <li class="list-inline-item">
-                        <a class="u-bg-transparent u-icon u-icon-light--air" href="#">
+                        <a class="u-bg-transparent u-icon u-icon-light--air text-custom" href="https://www.facebook.com/inSitiNews/" target="_blank">
                             <span class="fab fa-facebook-f u-icon__inner"></span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="u-bg-transparent u-icon u-icon-light--air" href="#">
-                            <span class="fab fa-google u-icon__inner"></span>
+                        <a class="u-bg-transparent u-icon u-icon-light--air text-custom" href="https://www.linkedin.com/company/insiti/about/" target="_blank">
+                            <span class="fab fa-linkedin u-icon__inner"></span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="u-bg-transparent u-icon u-icon-light--air" href="#">
+                        <a class="u-bg-transparent u-icon u-icon-light--air text-custom" href="https://twitter.com/insitinews" target="_blank">
                             <span class="fab fa-twitter u-icon__inner"></span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="u-bg-transparent u-icon u-icon-light--air text-custom" href="https://instagram.com/insiti_news" target="_blank">
+                            <span class="fab fa-instagram u-icon__inner"></span>
                         </a>
                     </li>
                 </ul>
                 <!-- End Social Networks -->
-                <span class="h4 u-text-light">+1 (062) 109-9222</span>
             </div>
         </div>
     </div>
