--- a/frontend/init/stylesheet/bishal.css
+++ b/frontend/init/stylesheet/bishal.css
@@ -2,6 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Signika');
 @import url('https://fonts.googleapis.com/css?family=Lobster+Two');
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
 
 figure {
   margin: 0 0 0 !important;
@@ -412,7 +413,8 @@ figure {
 
 
 .logo-font{
-  font-family: 'Lobster Two', cursive;
+  /*font-family: 'Lobster Two', cursive;*/
+  font-family: 'Orbitron', sans-serif;
   color: #fff;
   font-size: 2rem;
   font-weight: bold;
@@ -535,6 +537,9 @@ figure {
   font-size: 1.5rem;
 }
 
+.fs-1{
+  font-size: 0.75rem;
+}
 .t-5{
   top: 5px !important;
 }
@@ -606,10 +611,12 @@ figure {
 
 .item-container{
   position :relative;
+  top: 0;
+  left: 0;
   z-index: 1;
   width: 100%;
   height: 100%;
-  margin: auto;
+  transition: 0.5;
   overflow: hidden;
 }
 
@@ -619,16 +626,45 @@ figure {
 }
 
 .item-intro{
+  position: absolute;
+  top: 100%;
   display: none;
-  height: auto;
-  width: 100%;
+  height: 100%;
+  text-align: center;
+  box-sizing: border-box;
+  opacity: 0;
 }
 
 .item-container:hover .item-intro{
   display: block;
-  transform: translateY(-4rem);
+  z-index: 1;
+  top: 0;
+  transition: 0.5s;
+  transform: translateY(-50%);
+}
+
+.item-content{
+  position: relative;
+  width: 100%;
+  height: 4.5rem;
+  background: linear-gradient(280deg, #676895 0%, #413763 100%);
+  transition: all 0.5s ease-out;
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+  opacity: 0.8;
   border-radius: 5px 5px 0 0;
-  transition: transform 0.2s ease-in-out;
+  display: none;
+}
+
+.contents:hover .item-content{
+  transform: translateY(-100%);
+  display: block;
+  
+}
+
+.footer-logo:hover{
+  color: #1de9b6;
 }
 /* =================== Responsive ================ */
 
