--- a/frontend/init/stylesheet/bishal.css
+++ b/frontend/init/stylesheet/bishal.css
@@ -3,6 +3,9 @@
 @import url('https://fonts.googleapis.com/css?family=Signika');
 @import url('https://fonts.googleapis.com/css?family=Lobster+Two');
 @import url('https://fonts.googleapis.com/css?family=Orbitron');
+@import url('https://fonts.googleapis.com/css?family=Vibur');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700');
+
 
 figure {
   margin: 0 0 0 !important;
@@ -412,12 +415,51 @@ figure {
 /* ================= Conceptstor ====================== */
 
 
+.logo-container{
+  position: relative;
+  height: 50px;
+  width: 50px;
+  top: 5px;
+}
+
+.logo-box{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgba(15, 53, 82, .78824);
+  border: 4px solid rgba(15, 53, 82, .78824);
+  border-radius: 25%;
+}
+
+.logo{
+  padding: 0;
+  color: #fff;
+}
+
 .logo-font{
   /*font-family: 'Lobster Two', cursive;*/
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
   color: #fff;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bold;
+}
+
+.logo-text-1, .logo-text-2{
+  margin-left: 10px;
+  font-weight: bold;
+  font-size: 1.2rem;
+  position: absolute;
+  
+}
+
+.logo-text-1{
+  top: -6px;
+  left: 3px;
+}
+
+.logo-text-2{
+  top: 15px;
+  right: 15px;
 }
 
 .mw-95{
@@ -668,6 +710,11 @@ figure {
 }
 /* =================== Responsive ================ */
 
+@media screen and (max-height: 823px){
+  .bg-img{
+    height: 30vh;
+  }
+}
 
 @media (max-width: 1200px){
   .masonry-container{
