Linked to insiti groupe

--- a/app/views/landing/bishal2.html.erb
+++ b/app/views/landing/bishal2.html.erb
@@ -42,7 +42,7 @@
 
                     <!-- Home -->
                     <li class="nav-item hs-has-mega-menu u-header__nav-item hs-mega-menu-opened ml-3" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut" data-position="left">
-                        <a id="homeMegaMenu" class="nav-link u-header__nav-link pl-0 text-custom" href="javascript:;" aria-haspopup="true" aria-expanded="false">
+                        <a id="homeMegaMenu" class="nav-link u-header__nav-link pl-0 text-custom" href="http://www.insiti.co" target="_blank" aria-haspopup="true" aria-expanded="false">
                             Groupe      
                         </a>
                     </li>
@@ -83,19 +83,19 @@
                         <!-- List -->
                         <ul class="list-unstyled mb-0">
                             <li class="media mb-1">
-                                <div class="d-flex w-50 w-sm-50">
+                                <div class="d-flex w-100">
                                     <a href="#"class="h6 text-custom font-weight-bold">Voir la page enseigne</a>
                                 </div>
                             </li>
 
                             <li class="media mb-1">
-                                <div class="d-flex w-50 w-sm-50">
+                                <div class="d-flex w-100">
                                     <a href="#" class="h6 text-custom font-weight-bold">Contacter l’enseigne</a>
                                 </div>
                             </li>
 
                             <li class="media mb-1">
-                                <div class="d-flex w-50 w-sm-50">
+                                <div class="d-flex w-100">
                                     <a href="#" class="h6 text-custom font-weight-bold">Comparer les chiffres-clé</a>
                                 </div>
                             </li>
