--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -33,7 +33,7 @@
 
                         <!-- Home -->
                         <li class="nav-item hs-has-mega-menu u-header__nav-item hs-mega-menu-opened ml-3" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut" data-position="left">
-                            <a id="homeMegaMenu" class="nav-link u-header__nav-link pl-0 text-white" href="javascript:;" aria-haspopup="true" aria-expanded="false">
+                            <a id="homeMegaMenu" class="nav-link u-header__nav-link pl-0 text-white" href="http://www.insiti.co" target="_blank" aria-haspopup="true" aria-expanded="false">
                                 Groupe      
                             </a>
                         </li>
