Responsive according to device width

--- a/app/views/landing/bishal2.html.erb
+++ b/app/views/landing/bishal2.html.erb
@@ -41,7 +41,7 @@
                     <!-- End Home -->
 
                     <!-- Home -->
-                    <li class="nav-item hs-has-mega-menu u-header__nav-item hs-mega-menu-opened ml-3" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut" data-position="left">
+                    <li class="nav-item hs-has-mega-menu u-header__nav-item hs-mega-menu-opened" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut" data-position="left">
                         <a id="homeMegaMenu" class="nav-link u-header__nav-link pl-0 text-custom" href="http://www.insiti.co" target="_blank" aria-haspopup="true" aria-expanded="false">
                             Groupe      
                         </a>
@@ -443,7 +443,7 @@
 <footer class="u-bg-light-blue-50">
     <div class="container u-space-1-top u-space-0-bottom">
         <div class="row justify-content-md-between align-items-md-start">
-            <div class="col-md-6 mb-7 mb-md-0 text-custom">
+            <div class="col-md-6 mb-md-0 text-custom">
                 
                 <a href="bishal" class="logo-font mr-2 text-custom fa-size footer-logo">Conceptstor</a>
                 <span class="d-inline-block">
