--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -5,7 +5,7 @@
         <div class="overlay"></div>
         <div id="logoAndNav" class="container mw-95 position-absolute mx-auto custom-position">
             <!-- Nav -->
-            <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar hs-menu-initialized hs-menu-horizontal mt-3">
+            <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar hs-menu-initialized hs-menu-horizontal mt-3 mb-6">
                 <!-- Logo -->
                 <a class="navbar-brand u-header__navbar-brand u-header__navbar-brand-top-space" href="bishal" aria-label="Front">
                     <span class="logo-font">Conceptstor</span>
@@ -32,7 +32,7 @@
                         <!-- End Home -->
 
                         <!-- Home -->
-                        <li class="nav-item hs-has-mega-menu u-header__nav-item hs-mega-menu-opened ml-3" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut" data-position="left">
+                        <li class="nav-item hs-has-mega-menu u-header__nav-item hs-mega-menu-opened" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut" data-position="left">
                             <a id="homeMegaMenu" class="nav-link u-header__nav-link pl-0 text-white" href="http://www.insiti.co" target="_blank" aria-haspopup="true" aria-expanded="false">
                                 Groupe      
                             </a>
