responsive as per device-width

--- a/app/views/landing/bishal2.html.erb
+++ b/app/views/landing/bishal2.html.erb
@@ -69,19 +69,19 @@
     <div class="container u-space-2-top u-space-2-bottom">
         <div class="row">
             <div class="col-lg-6 mb-7 mb-lg-0">
-                <%= image_tag asset_pack_path('init/bootstrap/theme/img/600x600/img1.jpg'), :alt => "Image", :class=> "rounded w-100 h-auto"%>
+                <%= image_tag asset_pack_path('init/bootstrap/theme/img/600x600/img1.jpg'), :alt => "Image", :class=> "rounded w-100 h-auto p-2"%>
             </div>
             <div class="col-lg-6">
                 <!-- Sticky Block -->
                     <div class="js-sticky-block pl-lg-4 position-relative">
-                        <div class="mb-6">
+                        <div class="mb-6 p-2">
                             <h1 class="h4 text-custom font-weight-bold">Titre de l’image</h1>
                             <p class="mb-0 text-justify">Displaying this large amount of content in a smooth and seamless way was quite a challenge. By loading assets in the background, playing and stopping audio on the fly, parallaxing hotspots, and use of large images we succeeded in giving the user a smooth experience.</p>
                         </div>
                         <hr class="my-5">
 
                         <!-- List -->
-                        <ul class="list-unstyled mb-0">
+                        <ul class="list-unstyled p-2 mb-0">
                             <li class="media mb-1">
                                 <div class="d-flex w-100">
                                     <a href="#"class="h6 text-custom font-weight-bold">Voir la page enseigne</a>
@@ -104,7 +104,7 @@
 
                         <hr class="my-5">
 
-                        <div class="media">
+                        <div class="media p-2">
                             <div class="d-flex w-40 w-sm-30">
                                 <h4 class="h6 text-custom font-weight-bold">Partager</h4>
                             </div>
