--- a/app/views/landing/bishal2.html.erb
+++ b/app/views/landing/bishal2.html.erb
@@ -69,19 +69,19 @@
     <div class="container u-space-2-top u-space-2-bottom">
         <div class="row">
             <div class="col-lg-6 mb-7 mb-lg-0">
-                <%= image_tag asset_pack_path('init/bootstrap/theme/img/600x600/img1.jpg'), :alt => "Image", :class=> "rounded w-100 h-auto p-2"%>
+                <%= image_tag asset_pack_path('init/bootstrap/theme/img/600x600/img1.jpg'), :alt => "Image", :class=> "rounded w-100 h-auto p-3"%>
             </div>
             <div class="col-lg-6">
                 <!-- Sticky Block -->
                     <div class="js-sticky-block pl-lg-4 position-relative">
-                        <div class="mb-6 p-2">
+                        <div class="mb-6 p-3">
                             <h1 class="h4 text-custom font-weight-bold">Titre de l’image</h1>
                             <p class="mb-0 text-justify">Displaying this large amount of content in a smooth and seamless way was quite a challenge. By loading assets in the background, playing and stopping audio on the fly, parallaxing hotspots, and use of large images we succeeded in giving the user a smooth experience.</p>
                         </div>
                         <hr class="my-5">
 
                         <!-- List -->
-                        <ul class="list-unstyled p-2 mb-0">
+                        <ul class="list-unstyled p-3 mb-0">
                             <li class="media mb-1">
                                 <div class="d-flex w-100">
                                     <a href="#"class="h6 text-custom font-weight-bold">Voir la page enseigne</a>
@@ -104,7 +104,7 @@
 
                         <hr class="my-5">
 
-                        <div class="media p-2">
+                        <div class="media p-3">
                             <div class="d-flex w-40 w-sm-30">
                                 <h4 class="h6 text-custom font-weight-bold">Partager</h4>
                             </div>
@@ -443,7 +443,7 @@
 <footer class="u-bg-light-blue-50">
     <div class="container u-space-1-top u-space-0-bottom">
         <div class="row justify-content-md-between align-items-md-start">
-            <div class="col-md-6 mb-md-0 text-custom">
+            <div class="col-md-6 mb-md-0 text-center text-custom p-3">
                 
                 <a href="bishal" class="logo-font mr-2 text-custom fa-size footer-logo">Conceptstor</a>
                 <span class="d-inline-block">
@@ -455,7 +455,7 @@
                 
             </div>
 
-            <div class="col-md-6 mt-md-0 text-md-right">
+            <div class="col-md-6 mt-md-0 text-center  text-md-right p-3">
                 <!-- Social Networks -->
                 <ul class="list-inline">
                     <li class="list-inline-item">
