--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
   <head>
     <title>Conceptstor</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    
+    <%#= csp_meta_tag %>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <%#= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
