--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -25,7 +25,7 @@
                     <ul class="navbar-nav u-header__navbar-nav ml-auto">
                         <!-- Home -->
                         <li class="nav-item hs-has-mega-menu u-header__nav-item hs-mega-menu-opened" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut" data-position="left">
-                            <a id="homeMegaMenu" class="nav-link u-header__nav-link pl-0 text-white" href="javascript:;" aria-haspopup="true" aria-expanded="false">
+                            <a id="homeMegaMenu" class="nav-link u-header__nav-link pl-0 text-white" href="bishal3" aria-haspopup="true" aria-expanded="false">
                                 A Propos     
                             </a>
                         </li>
@@ -41,7 +41,7 @@
 
                         <!-- Button -->
                         <li class="nav-item d-none d-md-inline-block pl-3 pr-0">
-                            <a class="btn btn-custom btn-sm text-custom" href="#" target="_blank">
+                            <a class="btn btn-custom btn-sm text-custom" href="#">
                                 Me connecter
                             </a>
                         </li>
